--- a/lecture1/html/bird8/style/main.css
+++ b/lecture1/html/bird8/style/main.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'flappy';
+    src: url("../fonts/flappy.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: 'retro';
+    src: url("../fonts/font.ttf") format('truetype');
+}
+
 body {
     display: flex;
 }
